<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="bracket_left">(</string>
    <string name="_7">7</string>
    <string name="divide">/</string>
    <string name="bracket_right">)</string>
    <string name="_8">8</string>
    <string name="multiply">*</string>
    <string name="_9">9</string>
    <string name="app_shortcut_desc">OneSDiode</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="euqals">=</string>
    <string name="decimal">.</string>
    <string name="error">Error</string>
    <string name="the_calc_project">The CalC Project</string>
    <string name="app_logo">app logo</string>
    <string name="about">This Application was Created Out of the developer\'s curiosity towards Kotlin.\n\nIt is fully open source and can be found on github at:\n\nhttps://github.com/the-rebooted-coder/Friendly-Kotlin-Calculator</string>
    <string name="opening">Open Calculator</string>
    <string name="del">del</string>
    <string name="root">root</string>
    <string name="power">^</string>
    <string name="pi">pi</string>
    <string name="fact">!</string>
    <string name="Root">√</string>
    <string name="Fact">!</string>
    <string name="Power">^</string>
    <string name="PI">π</string>
    <string name="Del">del</string>
</resources>