<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/productsans"
                android:gravity="end"
                android:textColor="@color/white"
                android:textSize="50sp" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="75dp"
        android:fontFamily="@font/productsansbold"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="75sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:background="#000000"
        android:orientation="vertical">

        <LinearLayout
            android:background="@drawable/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/root"
                    style="@style/opreatorEpressions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/zero_back"
                    android:text="@string/Root" />

                <TextView
                    android:id="@+id/fact"
                    style="@style/opreatorEpressions"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/zero_back"
                    android:text="@string/Fact" />

                <TextView
                    android:id="@+id/power"
                    style="@style/opreatorEpressions"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/zero_back" />

                <TextView
                    android:id="@+id/pi"
                    style="@style/opreatorEpressions"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/zero_back" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="#131212"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/clear"
                    style="@style/TotalClearButtonStyle"
                    android:background="@drawable/total_clear_blacground"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/ac" />


                <TextView
                    android:id="@+id/startBracket"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/background_button_expressions"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/bracket_left" />


                <TextView
                    android:id="@+id/closeBracket"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/background_button_expressions"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/bracket_right" />


                <TextView
                    android:id="@+id/Divide"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/background_button_expressions"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/divide" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num7"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/_7" />


                <TextView
                    android:id="@+id/num8"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/_8" />


                <TextView
                    android:id="@+id/num9"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/_9" />


                <TextView
                    android:id="@+id/Multiply"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/background_button_expressions"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/multiply" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num4"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/_4" />


                <TextView
                    android:id="@+id/num5"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/_5" />


                <TextView
                    android:id="@+id/num6"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/_6" />


                <TextView
                    android:id="@+id/Minus"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/background_button_expressions"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/minus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num1"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/_1" />


                <TextView
                    android:id="@+id/num2"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/_2" />


                <TextView
                    android:id="@+id/num3"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/_3" />


                <TextView
                    android:id="@+id/Add"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/background_button_expressions"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/plus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num0"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/_0" />


                <TextView
                    android:id="@+id/dot"
                    style="@style/NumberButtonStyle"
                    android:background="@drawable/oval_light_blue_bg"
                    android:fontFamily="@font/productsans"
                    android:text="@string/decimal" />

                <LinearLayout
                    android:id="@+id/back"
                    style="@style/NumberButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/oval_light_blue_bg"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/Del"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_baseline_backspace_24" />


                </LinearLayout>

                <TextView
                    android:id="@+id/Equals"
                    style="@style/ActionButtonStyle"
                    android:background="@drawable/background_button_expressions"
                    android:fontFamily="@font/productsansbold"
                    android:text="@string/euqals" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>